# MurmurSIMD

./: .gitignore  CMakeLists.txt  Capabilities.c  Capabilities.h  MurmurSIMD.c  MurmurSIMD.h  MurmurSIMD32_AVX2.c  MurmurSIMD32_MMX.c  MurmurSIMD32_SSE2.c  MurmurSIMD32_x86.c  MurmurSIMD64_AVX2.c  MurmurSIMD64_SSE2.c  MurmurSIMD64_x86.c  README.md  Targets.h
Tests/: Test.c
